envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 3099
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/var/log/access.log"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api/v1/auth/identity/sessions"
                          route:
                            cluster: barong
                            prefix_rewrite: "/api/v2/identity/sessions"
                          per_filter_config:
                            envoy.ext_authz:
                              disabled: true
                        - match:
                            prefix: "/api/v1/payments"
                            headers:
                              - name: ":method"
                                exact_match: "POST"
                          route:
                            cluster: payments
                            prefix_rewrite: "/payments"
                        - match:
                            prefix: "/api/v1/payments"
                            headers:
                              - name: ":method"
                                exact_match: "GET"
                          route:
                            cluster: payments-read-model
                            prefix_rewrite: "/payments"
                        - match:
                            prefix: "/api/v1/accounts"
                          route:
                            cluster: accounts
                            prefix_rewrite: "/accounts"
                http_filters:
                  - name: envoy.ext_authz
                    config:
                      http_service:
                        allowed_authorization_headers:
                          - location
                          - set-cookie
                          - authorization
                          - proxy-authenticate
                          - www-authenticate
                        allowed_request_headers:
                          - user-agent
                          - cookie
                          - x-forwarded-proto
                          - authorization
                          - proxy-authorization
                          - x-forwarded-host
                          - x-forwarded-for
                          - x-auth-apikey
                          - x-auth-nonce
                          - x-auth-signature
                          - from
                        path_prefix: "/api/v2/auth"
                        server_uri:
                          cluster: barong
                          timeout: 1.000s
                          uri: http://barong:8051
                  - name: envoy.router
                    config: {}
  clusters:
    - name: barong
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: barong
            port_value: 8051
    - name: payments
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: payments
            port_value: 3880
    - name: payments-read-model
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: payments-read-model
            port_value: 4880
    - name: accounts
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: accounts
            port_value: 3380
admin:
  access_log_path: "/var/log/envoy-admin-access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 3999
